# mcp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  datetime_helper.py  mcphost.json  oci_compute.py  oci_compute_instance_agent.py  oci_identity.py  oci_metrics.py  oci_migration.py  oci_networking.py  oci_registry.py  oci_resource_search.py  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: build.yml  lint.yml
scripts/: .gitignore  README.md  commands_3.66.1.txt  denylist  oci-api-denylist-generator.py
src/datetime-helper-mcp-server/: README.md  pyproject.toml
src/datetime-helper-mcp-server/oracle/datetime_helper_mcp_server/: __init__.py  server.py
src/datetime-helper-mcp-server/oracle/datetime_helper_mcp_server/tests/: test_datetime_helper_tools.py
src/dbtools-mcp-server/: README.md  dbtools-mcp-server.py  requirements.txt  test_dbtools_mcp_server.py
src/mysql-mcp-server/: README.md  example_config.json  local_config.json  mysql_mcp_server.py  requirements.txt  test_mysql_mcp_server.py  utils.py
src/oci-access-governance-mcp-server/: README.md  pyproject.toml
src/oci-ai-data-platform-mcp-server/: README.md  pyproject.toml
src/oci-analytics-mcp-server/: README.md  pyproject.toml
src/oci-announcements-mcp-server/: README.md  pyproject.toml
src/oci-api-gateway-mcp-server/: README.md  pyproject.toml
src/oci-api-mcp-server/: README.md  pyproject.toml
src/oci-apm-availability-monitoring-mcp-server/: README.md  pyproject.toml
src/oci-application-dependency-management-mcp-server/: README.md  pyproject.toml
src/oci-application-performance-monitoring-mcp-server/: README.md  pyproject.toml
src/oci-artifacts-mcp-server/: README.md  pyproject.toml
src/oci-audit-mcp-server/: README.md  pyproject.toml
src/oci-autoscaling-mcp-server/: README.md  pyproject.toml
src/oci-bastion-mcp-server/: README.md  pyproject.toml
src/oci-big-data-mcp-server/: README.md  pyproject.toml
src/oci-blockchain-platform-mcp-server/: README.md  pyproject.toml
src/oci-budgets-mcp-server/: README.md  pyproject.toml
src/oci-cache-mcp-server/: README.md  pyproject.toml
src/oci-certificates-mcp-server/: README.md  pyproject.toml
src/oci-cli-mcp-server/: pyproject.toml
src/oci-cli-mcp-server/oracle/oci_cli_mcp_server/: server.py  test_server.py
src/oci-cloud-advisor-mcp-server/: README.md  pyproject.toml
src/oci-cloud-bridge-mcp-server/: README.md  pyproject.toml
src/oci-compute-instance-agent-mcp-server/: README.md  pyproject.toml
src/oci-compute-instance-agent-mcp-server/oracle/oci_compute_instance_agent_mcp_server/: __init__.py  server.py
src/oci-compute-instance-agent-mcp-server/oracle/oci_compute_instance_agent_mcp_server/tests/: test_compute_instance_agent.py
src/oci-compute-mcp-server/: README.md  pyproject.toml
src/oci-compute-mcp-server/oracle/oci_compute_mcp_server/: __init__.py  models.py  server.py  utils.py
src/oci-compute-mcp-server/oracle/oci_compute_mcp_server/tests/: test_compute_tools.py
src/oci-data-labeling-management-mcp-server/: README.md  pyproject.toml
src/oci-data-safe-mcp-server/: README.md  pyproject.toml
src/oci-data-science-mcp-server/: README.md  pyproject.toml
src/oci-database-management-sql-performance-watch-mcp-server/: README.md  pyproject.toml
src/oci-delegate-access-control-mcp-server/: README.md  pyproject.toml
src/oci-full-stack-disaster-recovery-mcp-server/: README.md  pyproject.toml
src/oci-generative-ai-mcp-server/: README.md  pyproject.toml
src/oci-identity-mcp-server/: README.md  pyproject.toml
src/oci-identity-mcp-server/oracle/oci_identity_mcp_server/: __init__.py  server.py
src/oci-identity-mcp-server/oracle/oci_identity_mcp_server/tests/: test_identity_tools.py
src/oci-java-management-mcp-server/: README.md  pyproject.toml
src/oci-load-balancing-mcp-server/: README.md  pyproject.toml
src/oci-migration-mcp-server/: README.md  pyproject.toml
src/oci-migration-mcp-server/oracle/oci_migration_mcp_server/: __init__.py  server.py
src/oci-migration-mcp-server/oracle/oci_migration_mcp_server/tests/: test_migration_tools.py
src/oci-monitoring-mcp-server/: README.md  pyproject.toml
src/oci-monitoring-mcp-server/oracle/oci_monitoring_mcp_server/: __init__.py  server.py
src/oci-monitoring-mcp-server/oracle/oci_monitoring_mcp_server/tests/: test_monitoring_tools.py
src/oci-networking-mcp-server/: README.md  pyproject.toml
src/oci-networking-mcp-server/oracle/oci_networking_mcp_server/: __init__.py  models.py  server.py
src/oci-networking-mcp-server/oracle/oci_networking_mcp_server/tests/: test_networking_tools.py
src/oci-object-storage-mcp-server/: README.md  pyproject.toml
src/oci-object-storage-mcp-server/oracle/oci_object_storage_mcp_server/: __init__.py  models.py  server.py
src/oci-object-storage-mcp-server/oracle/oci_object_storage_mcp_server/tests/: test_object_storage_tools.py
src/oci-oracle-streaming-mcp-server/: README.md  pyproject.toml
src/oci-pricing-mcp-server/: .dockerignore  .gitignore  Dockerfile  README.md  pricing-mcp-server.py  pyproject.toml  test_oci_pricing_mcp_server.py
src/oci-process-automation-mcp-server/: README.md  pyproject.toml
src/oci-registry-mcp-server/: README.md  pyproject.toml
src/oci-registry-mcp-server/oracle/oci_registry_mcp_server/: __init__.py  server.py
src/oci-registry-mcp-server/oracle/oci_registry_mcp_server/tests/: test_registry_tools.py
src/oci-resource-discovery-and-monitoring-control-mcp-server/: README.md  pyproject.toml
src/oci-resource-search-mcp-server/: README.md  pyproject.toml
src/oci-resource-search-mcp-server/oracle/oci_resource_search_mcp_server/: __init__.py  server.py
src/oci-resource-search-mcp-server/oracle/oci_resource_search_mcp_server/tests/: test_resource_search_tools.py
src/oci-usage-mcp-server/: README.md  pyproject.toml
src/oci-usage-mcp-server/oracle/oci_usage_mcp_server/: __init__.py  server.py
src/oci-usage-mcp-server/oracle/oci_usage_mcp_server/tests/: test_usage_tools.py
tests/: README.md  pyproject.toml
(+210 files in other folders)
