[project]
name = "oracle.datetime-helper-mcp-server"
version = "0.1.0"
description = "Date/time helper MCP server"
readme = "README.md"
authors = [
    { name = "Richard Gebhardt", email = "richard.gebhardt@oracle.com" }
]
requires-python = ">=3.13"
dependencies = [
    "oci==2.160.0",
    "fastmcp==2.12.2"
]

[project.scripts]
"oracle.datetime-helper-mcp-server" = "oracle.datetime_helper_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]