[project]
name = "oracle.oci-api-mcp-server"
version = "0.1.0"
description = "OCI CLI MCP server"
readme = "README.md"
authors = [
    { name = "Richard Gebhardt", email = "richard.gebhardt@oracle.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp==2.12.2",
    "oci==2.160.0"
]

[project.scripts]
"oracle.oci-api-mcp-server" = "oracle.oci_cli_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
