[project]
name = "oracle.oci-compute-instance-agent-mcp-server"
version = "0.1.0"
description = "OCI Compute Instance Agent MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "oci==2.160.0",
    "fastmcp==2.12.2",
]

[project.scripts]
"oracle.oci-compute-instance-agent-mcp-server" = "oracle.oci_compute_instance_agent_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
