[project]
name = "oracle.oci-database-management-sql-performance-watch-mcp-server"
version = "0.0.0"
description = "OCI Database Management SQL Performance Watch MCP server"
readme = "README.md"
requires-python = ">=3.13"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Oracle MCP", email = "237432095+oracle-mcp@users.noreply.github.com"},
]
