[project]
name = "oracle.oci-java-management-mcp-server"
version = "0.0.0"
description = "OCI Java Management MCP server"
readme = "README.md"
requires-python = ">=3.13"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Oracle MCP", email = "237432095+oracle-mcp@users.noreply.github.com"},
]
