[project]
name = "oracle.oci-migration-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aaron", email = "aaron-email@place.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp==2.12.2",
    "oci==2.160.0"
]

[project.scripts]
"oracle.oci-migration-mcp-server" = "oracle.oci_migration_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]
