[project]
name = "oci-pricing-mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
  "babel>=2.10",
  "pycountry>=22.3.5",
]

[project.scripts]
oci-pricing-mcp = "oci_pricing_mcp.entry:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["oci_pricing_mcp*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E","F","I","UP","B"]
ignore = ["E501"] 
