[project]
name = "oracle.oci-process-automation-mcp-server"
version = "0.0.0"
description = "OCI Process Automation MCP server"
readme = "README.md"
requires-python = ">=3.13"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Oracle MCP", email = "237432095+oracle-mcp@users.noreply.github.com"},
]
