[project]
name = "oracle.oci-resource-search-mcp-server"
version = "0.1.0"
description = "OCI Resource Search Service MCP server"
readme = "README.md"
requires-python = ">=3.13"
license = "UPL-1.0"
license-files = ["LICENSE.txt"]
dependencies = [
    "fastmcp==2.12.2",
    "oci==2.160.0",
]

[project.scripts]
"oracle.oci-resource-search-mcp-server" = "oracle.oci_resource_search_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
